# pyetl-package

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
data-pyetl/: pyproject.toml
data-pyetl/.github/workflows/: workflow.yml
data-pyetl/data_pyetl/: api_helper.py  connectors.py  database_helper.py  file_helper.py  loggin.py
data-pyetl/tests/: test.csv  test.json  test.ods  test_api_helpers.py  test_data_pyetl.py  test_database_helpers.py  test_file_helpers.py
data_pyetl/: database_helper.py  file_helper.py  loggin.py
tests/: test.parquet  test.xls  test.xlsx  test_connectors.py  test_database_helpers.py  test_file_helpers.py
