[tool.poetry]
name = "data-pyetl"
version = "0.1.0"
description = ""
authors = ["MacSoares <macario.junior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
numpy = "^1.22.3"
SQLAlchemy = "^1.4.32"
requests = "^2.27.1"
pyodbc = "^4.0.32"
ipython = "^8.1.1"
pytz = "^2021.3"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
